src/components/pages/data/cards/last-updated-label.module.scss
.container {
  display: flex;
  align-items: center;
  line-height: 1;
  @include type-size(100);
  margin: spacer(16) 0 spacer(8);

  img {
    margin-right: spacer(4);
  }
}

