fix(last-updated-label): alignment

--- a/src/components/pages/data/cards/last-updated-label.module.scss
+++ b/src/components/pages/data/cards/last-updated-label.module.scss
@@ -1,6 +1,5 @@
 .container {
   display: flex;
-  align-items: center;
   line-height: 1;
   @include type-size(100);
   margin: spacer(16) 0 spacer(8);
